2006-07-14  Marcus Brinkmann  <marcus@g10code.de>

	* patches/sylpheed-claws-2.3.1 (08-w32-logo.patch,
	09-w32-icon.patch, 99-auto.patch): New files.

2006-07-12  Marcus Brinkmann  <marcus@g10code.de>

	* src/inst-sections.nsi: Install start menu and desktop link for
	the sylpheed manual.
	* src/inst-sylpheed-claws.nsi: Install manual.
	(DESC_Menu_sylpheed_pdf): New translation.
	* src/uninst-sylpheed-claws.nsi: Uninstall manual.

2006-06-28  Werner Koch  <wk@g10code.com>

	* Makefile.am (copy-news): New target.

2006-06-27  Werner Koch  <wk@g10code.com>

	* src/inst-sylpheed-claws.nsi: Renamed strings to Sylpheed-Claws.
	* src/installer-finish.nsi: Ditto.
	* src/inst-sections.nsi: Ditto.

2006-06-26  Werner Koch  <wk@g10code.com>

	Released 1.0.3.

	* Makefile.am (EXTRA_DIST): Added new Sylpheed patches. Removed
	old sylpheed patches.

2006-05-30  Werner Koch  <wk@g10code.com>

	Released 1.0.2.

2006-05-29  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (DIST): Add
	patches/sylpheed-claws-2.2.0/01-locale-dir.patch,
	patches/sylpheed-claws-2.2.0/02-fix-plugin-dir.patch,
	patches/sylpheed-claws-2.2.0/03-std-plugins.patch and
	patches/sylpheed-claws-2.2.0/04-pgpcore-def.patch.
	* patches/sylpheed-claws-2.2.0/01-locale-dir.patch,
	patches/sylpheed-claws-2.2.0/02-fix-plugin-dir.patch,
	patches/sylpheed-claws-2.2.0/03-std-plugins.patch,
	patches/sylpheed-claws-2.2.0/04-pgpcore-def.patch: New file.

	* Makefile.am (EXTRA_DIST): Add
	patches/glib-2.9.2-wk1/03-gspawn-w32-fixup.patch and
	patches/glib-2.9.2-wk1/04-gspawn-w32-buffering.patch.
	* patches/glib-2.9.2-wk1/03-gspawn-w32-fixup.patch: New file.
	* patches/glib-2.9.2-wk1/04-gspawn-w32-buffering.patch: New file.

2006-04-27  Marcus Brinkmann  <marcus@g10code.de>

	* src/Makefile.am (gpg4win_pkg_gnupg_post_install): New macro to
	generate man pages.
	* src/gpg4win.mk.in (stamps/stamp-$(1)-04-install): Invoke post
	install macro.
	* src/inst-gnupg.nsi: Install man pages.