@@ -1,3 +1,7 @@
+2006-07-22  Timo Schulz  <twoaday@g10code.de>
+
+	* Makefile.am: Added new sylpheed patches.
+	
 2006-07-14  Marcus Brinkmann  <marcus@g10code.de>
 
 	* patches/sylpheed-claws-2.3.1 (08-w32-logo.patch,
